update: 接近天花板的TS类型体操, 看懂你就能玩转TS了

--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -12,6 +12,10 @@ tags:
 
 本文要实现一种类型工具 `type result = Add<"9007199254740991", "9007199254740991">`，能计算出两个数字字符串的和，即 `"18014398509481982"`
 
+本文代码见：[https://github.com/kawayiLinLin/typescript-lodash/tree/master](https://github.com/kawayiLinLin/typescript-lodash/tree/master)
+
+在线浏览：[https://github1s.com/kawayiLinLin/typescript-lodash/blob/HEAD/lib/number.ts#L423](https://github1s.com/kawayiLinLin/typescript-lodash/blob/HEAD/lib/number.ts#L423)
+
 ## TS 类型体操基本原理
 
 ### if 和 else
@@ -26,7 +30,7 @@ type Example = A extends B ? true : false
 
 `type Example = A extends B ? true : false` 中的 `true` 和 `false` 即可以理解成它们分别为 `if` 分支和 `else` 分支中要写的代码
 
-而 `if` 中的条件即为 `A extends B`，`A` 是否可以赋值给 `B`
+而 `if` 中的条件即为 `A extends B`，`A` 是否可以分配给 `B`
 
 要实现 `else if` 则需要多个这样的条件类型进行组合
 
@@ -51,6 +55,7 @@ type ExampleB = B extends `${infer FirstChar}${infer Rest}` ? FirstChar : never 
 
 ```ts
 // C 意为 Condition，条件
+// common
 // 与，即 C1，C2 同为真
 type And<C1 extends boolean, C2 extends boolean> = C1 extends true
   ? C2 extends true
@@ -58,6 +63,7 @@ type And<C1 extends boolean, C2 extends boolean> = C1 extends true
     : false
   : false
 
+// common
 // 与，即 C1，C2 有一个为真
 type Or<C1 extends boolean, C2 extends boolean> = C1 extends true
   ? true
@@ -65,11 +71,38 @@ type Or<C1 extends boolean, C2 extends boolean> = C1 extends true
   ? true
   : false
 
+// common
 // 非，即反转 C 的真假状态
 type Not<C extends boolean> = C extends true ? false : true
 ```
 
-`ts` 目前不支持动态个数的泛型参数，因此如果有多个条件
+`ts` 目前不支持动态个数的泛型参数，因此如果有多个条件，我们需要定义多个不同的，比如
+
+```ts
+// common
+// 有三个条件的情况
+type And3<C1 extends boolean, C2 extends boolean, C3 extends boolean> = And<
+  And<C1, C2>,
+  C3
+>
+
+// common
+// 有四个条件的情况
+type And4<
+  C1 extends boolean,
+  C2 extends boolean,
+  C3 extends boolean,
+  C4 extends boolean
+> = And<And3<C1, C2, C3>, C4>
+```
+
+现在，我们已经封装了若干个类型工具 `And Or Not`，要达成基于 `ts` 的类型系统实现加法器的目标
+
+我们需要很多个这样的类型工具
+
+为了方便管理，我们需要给它分模块，比如上面的与或非，我们划分在 `common` 里
+
+我们还需要 `function、array、number、object、string` 这另外的五个，用于处理函数类型、元组类型、数字类型、对象类型、字符类型
 
 ### 判断相等
 
@@ -78,10 +111,14 @@ type Not<C extends boolean> = C extends true ? false : true
 在 ts 类型系统中，也可以实现类似的判断
 
 ```ts
+// common
+// 判断左侧类型是否可以分配给右侧类型
 type CheckLeftIsExtendsRight<T extends any, R extends any> = T extends R
   ? true
   : false
 
+// common
+// 判断左侧类型是否和右侧类型一致
 type IsEqual<A, B> = (<T>() => T extends A ? 1 : 2) extends <
   T1
 >() => T1 extends B ? 1 : 2
@@ -89,24 +126,94 @@ type IsEqual<A, B> = (<T>() => T extends A ? 1 : 2) extends <
   : false
 ```
 
-`CheckLeftIsExtendsRight` 即校验左值是否可赋值给右值，和 `==` 不同的是，`==` 会进行类型转换后进行比较，而条件类型 `Left extends Right ? xxx : xxx` 只会进行结构性兼容的检查
+`CheckLeftIsExtendsRight` 即校验左侧类型是否可分配给右侧类型，和 `==` 不同的是，`==` 会进行类型转换后进行比较，而条件类型 `Left extends Right ? xxx : xxx` 只会进行结构性兼容的检查
 
 如
 
 ```ts
+type Example1 = { a: 1; b: 2 } extends { a: 1 } ? true : false // true
+type Example2 = 1 | 2 extends 1 ? true : false // true
 ```
+
+虽然两个类型长的不一样，但是可以通过约束校验
 
 `IsEqual` 参考 [github - typescript issue：[Feature request]type level equal operator](https://github.com/microsoft/TypeScript/issues/27024#issuecomment-510924206)
 
 ### toString
 
+要实现 ts 的数学运算过于麻烦，因为数字是无法进行 infer 的，如何判断它（一个数字类型）为整型，浮点型？还是正数，或者负数？是不是仅仅有一个数字类型没有任何办法？
+
+这都需要基于字符类型（或元组类型）的模式匹配
+
 ```ts
+// string
+// 将类型转为字符串有一定的限制，仅支持下面的类型
 type CanStringified = string | number | bigint | boolean | null | undefined
-/**
- * @exports
- * 将支持的类型转化为字符串
- */
+
+// string
+// 将支持的类型转化为字符串
 type Stringify<T extends CanStringified> = `${T}`
+```
+
+效果
+
+```ts
+type Example1 = Stringify<0> // "0"
+
+type Example2 = Stringify<-1> // "-1"
+
+type Example3 = Stringify<0.1> // "0.1"
+
+type Example4 = Stringify<"0.2"> // "0.2"
+```
+
+### 循环
+
+在 js 中，我们可以通过 `for、while、do...while` 等循环进行可迭代对象的遍历，这些都离不开一个东西，那就是循环条件
+
+比如在 for 循环中 `for (初始化; 条件; 循环后逻辑)` 我们一般用一个变量 `i` ，每一次循环后进行自增，循环条件一般是将 `i` 与另一个数比较大小
+
+那么我们还需要实现一个数字类型大小比较，数字类型累加的工具类型
+
+`ts` 中的循环可以通过递归来实现，`ts` 的类型系统中不存在类型赋值的概念
+
+```ts
+type Example = 1
+Example = 2 // 没有这种写法
+```
+
+只有通过每次递归时，把当前泛型参数处理后，当做下一次递归的泛型参数，终止递归时，返回当前某一个泛型参数的类型
+
+通过一个最简单的递归类型例子来看一下这个过程
+
+```ts
+type Example<
+  C extends boolean = true,
+  Tuple extends unknown[] = [1]
+> = C extends true ? Example<false, [...Tuple, 1]> : Tuple
+
+type Result = Example // [1, 1]
+```
+
+如上示例，`Result` 得到的类型是 `[1, 1]`
+
+第一次：C 是默认类型 true， 则会走到 `Example<false, [...Tuple, 1]>`，其中 `[...Tuple, 1]` 的结果为 `[...[1], 1]`，即 `[1, 1]`
+
+第二次：C 传入了 false，会走到 `Tuple`，Tuple 的值为上次传入的值 `[1, 1]`，最后的返回类型为 `[1, 1]`
+
+除了递归，还有两种方式可以循环，一种是分布式条件类型，还有一种是映射类型，但是它们都很难传递类型
+
+```ts
+// 分布式条件类型，当泛型参数 T 为联合类型时，条件类型即为分布式条件类型，会将 T 中的每一项分别分发给 extends 进行比对
+type Example1<T> = T extends number ? T : never
+
+type Result1 = Example1<"1" | "2" | 3 | 4> // 3 | 4
+
+// 映射类型，固定写法，in 操作符会分发 T 成为新对象类型的键
+type Example2<T> = {
+  [Key in T]: Key
+}
+type Result2 = Example2<"1" | "2" | 3 | 4> // { 1: "1"; 2: "2"; 3: 3; 4: 4; }
 ```
 
 ### 基本的数学运算
@@ -122,14 +229,13 @@ type NumberLike = number | `${number}`
 判断为 0
 
 ```ts
-/**
- * number类型是否为0
- */
+// N 意为 Number 数字
+// number
+// number类型是否为0，判断 N 是否可分配给 0 | "0"
 type IsZero<N extends NumberLike> = common.CheckLeftIsExtendsRight<N, 0 | "0">
 
-/**
- * number类型是否大于0
- */
+// number
+// number类型是否大于0，泛型类型有限制 NumberLike，所以它一定是个数或者由数字构成的字符串，将其转为字符串后，判断最前面是不是 -，如果不是，就是大于零
 type IsOverZero<N extends NumberLike> = IsZero<N> extends true
   ? false
   : common.CheckLeftIsExtendsRight<
@@ -137,32 +243,33 @@ type IsOverZero<N extends NumberLike> = IsZero<N> extends true
       never
     >
 
-/**
- * number类型是否小于0
- */
+// number
+// number类型是否小于0，对上面 IsOverZero 的结果取反
 type IsLessZero<N extends NumberLike> = common.Not<IsOverZero<N>>
 ```
 
-#### 比较大小
+#### 两数相加
+
+在上面 `循环` 章节，我们讲到了，可以通过递归传递修改后的泛型参数，来创建复杂的工具类型
+
+此场景下，我们可以生成动态的类型，最常见的有这几种，元组类型，模板字符串类型，联合类型
+
+而元组类型的长度是可以访问的 如 `[0, 1, 2]['length']` 结果为 `3`，且元组类型是可以拼接的，如 `[...[0, 1, 2], ...[0]]['length']` 的长度为 `4`
+
+那么我们可以动态生成两个指定长度的元组类型，然后拼接到一起，获取拼接后的元组长度，就可以得到正整数（和 0）的加法了
+
+参考：[https://juejin.cn/post/7050893279818317854#heading-8](https://juejin.cn/post/7050893279818317854#heading-8)
 
 ```ts
-type CompareHelper<
-  N1 extends number,
-  N2 extends number,
-  A1 extends unknown[] = array.GetTuple<N1>,
-  A2 extends unknown[] = array.GetTuple<N2>
-> = IsNotEqual<N1, N2, true> extends true
-  ? common.Or<IsZero<A1["length"]>, IsZero<A2["length"]>> extends true
-    ? IsZero<A1["length"]> extends true
-      ? false
-      : true
-    : CompareHelper<array.Pop<A1>["length"], array.Pop<A2>["length"]>
-  : false
+// array
+// 构造长度一定（Length）的元组
+type GetTuple<Length extends number = 0> = GetTupleHelper<Length>
 
-type Compare<N1 extends number, N2 extends number> = CompareHelper<N1, N2>
+type GetTupleHelper<
+  Length extends number = 0,
+  R extends unknown[] = []
+> = R["length"] extends Length ? R : GetTupleHelper<Length, [...R, unknown]>
 ```
-
-#### 两数相加
 
 ```ts
 type IntAddSingleHepler<N1 extends number, N2 extends number> = [
@@ -170,10 +277,8 @@ type IntAddSingleHepler<N1 extends number, N2 extends number> = [
   ...array.GetTuple<N2>
 ]["length"]
 
-/**
- * 正整数（和0）加法，A1，A2最大999
- * @see https://juejin.cn/post/7050893279818317854#heading-8
- */
+// number
+// 正整数（和0）加法，T1，T2最大999
 type IntAddSingle<N1 extends number, N2 extends number> = IntAddSingleHepler<
   N1,
   N2
@@ -182,36 +287,705 @@ type IntAddSingle<N1 extends number, N2 extends number> = IntAddSingleHepler<
   : number
 ```
 
+#### 比较大小
+
+如果想要实现元组类型的排序，那就必须要能够比较数字大小
+
+如何实现数字类型大小的比较呢？
+
+还是得基于元组
+
+基于两个数 `N1`、 `N2`，创建不同的元组 `T1`、`T2`，依次减少两个元组的长度（删除第一位或最后一位），当有一个元组长度为 0 时，就是这个元组对应的数字类型，比另一个数字类型小（或相等，所以也要先判断是否不相等才进行比较）
+
+去掉数组最后一位的实现：[https://juejin.cn/post/7045536402112512007#heading-2](https://juejin.cn/post/7045536402112512007#heading-2)
+
+基于模式匹配，匹配出最后一项，和剩余项，并返回剩余项
+
+类型系统中没有改变原类型的概念，因此元组类型的增删改查都应该直接返回修改后的类型，而不是修改后的变化值
+
+如在 js 中，`[1, 2, 3].shift()` 会返回 `1`，`[1, 2, 3].pop()` 会返回 `3`，但是 ts 类型系统中，这样返回是没有意义的，`Pop<[1, 2, 3]>` 应该得到类型 `[1, 2]`
+
+```ts
+// array
+// 去掉数组的最后一位
+type Pop<T extends unknown[]> = T extends [...infer LeftRest, infer Last]
+  ? LeftRest
+  : never
+```
+
+```ts
+// T 意为 Tuple 元组
+type CompareHelper<
+  N1 extends number,
+  N2 extends number,
+  T1 extends unknown[] = array.GetTuple<N1>,
+  T2 extends unknown[] = array.GetTuple<N2>
+> = IsNotEqual<N1, N2, true> extends true
+  ? common.Or<IsZero<T1["length"]>, IsZero<T2["length"]>> extends true
+    ? IsZero<T1["length"]> extends true
+      ? false
+      : true
+    : CompareHelper<array.Pop<T1>["length"], array.Pop<T2>["length"]>
+  : false
+
+// number
+// 比较两个数字类型大小
+type Compare<N1 extends number, N2 extends number> = CompareHelper<N1, N2>
+```
+
 #### 两数相减
+
+两个数字类型相减的逻辑与两个数字类型比较大小的逻辑类似，但是返回类型时，会返回剩余长度多的元组的长度
+
+这个实现受到元组类型长度的限制，只能得到正数（或 0），即结果的绝对值
+
+且用在其他工具类型中时，会出现 `类型实例化过深，并可能无限（Type instantiation is excessively deep and possibly infinite）` 的报错，参考 [github issue](https://github.com/microsoft/TypeScript/issues/37613)
+
+即：目前有 50 个嵌套实例的限制，可以通过批处理规避限制 （20210714）
+
+```ts
+// 批处理示例
+type GetLetters<Text> =
+  Text extends `${infer C0}${infer C1}${infer C2}${infer C3}${infer C4}${infer C5}${infer C6}${infer C7}${infer C8}${infer C9}${infer Rest}`
+    ? C0 | C1 | C2 | C3 | C4 | C5 | C6 | C7 | C8 | C9 | GetLetters<Rest>
+    : Text extends `${infer C}${infer Rest}`
+    ? C | GetLetters<Rest>
+    : never
+```
+
+减法实现
 
 ```ts
 type IntMinusSingleAbsHelper<
   N1 extends number,
   N2 extends number,
-  A1 extends unknown[] = array.GetTuple<N1>,
-  A2 extends unknown[] = array.GetTuple<N2>
+  T1 extends unknown[] = array.GetTuple<N1>,
+  T2 extends unknown[] = array.GetTuple<N2>
 > = IsNotEqual<N1, N2, true> extends true
-  ? common.Or<IsZero<A1["length"]>, IsZero<A2["length"]>> extends true
-    ? IsZero<A1["length"]> extends true
-      ? A2["length"]
-      : A1["length"]
-    : IntMinusSingleAbsHelper<array.Pop<A1>["length"], array.Pop<A2>["length"]>
+  ? common.Or<IsZero<T1["length"]>, IsZero<T2["length"]>> extends true
+    ? IsZero<T1["length"]> extends true
+      ? T2["length"]
+      : T1["length"]
+    : IntMinusSingleAbsHelper<array.Pop<T1>["length"], array.Pop<T2>["length"]>
   : 0
 
+// number
+// 两个数字类型相减，得到绝对值
 type IntMinusSingleAbs<
   N1 extends number,
   N2 extends number
 > = IntMinusSingleAbsHelper<N1, N2>
 ```
 
+虽然有嵌套深度的限制，写好的减法不能用，但是加法是很好用的，有加法我们一样可以写出很多逻辑
+
+## 参考 js 封装工具类型
+
+工具类型可能相互依赖，如果遇到没见过的，请跳转到对应章节查看
+
+### 封装 string 工具类型
+
+
+#### Stringify - 将类型字符串化
+
+```ts
+/**
+ * 将支持的类型转化为字符串
+ * @example
+ * type Result = Stringify<0> // "0"
+ */
+type Stringify<T extends common.CanStringified> = `${T}`
+```
+
+#### GetChars - 获取字符
+
+```ts
+/**
+ * @exports
+ * 获取模板字符串类型中的字符
+ * @see https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-5.html
+ * @example
+ * type Result = GetChars<'abc'> // 'a' | 'b' | 'c'
+ */
+type GetChars<S> = GetCharsHelper<S, never>
+
+/**
+ * 以 尾递归 tail-recursive 的方式优化 GetChars，不导出为工具类型
+ */
+type GetCharsHelper<S, Acc> = S extends `${infer Char}${infer Rest}`
+  ? GetCharsHelper<Rest, Char | Acc>
+  : Acc
+```
+
+#### Split - 分割字符串
+
+```ts
+type SplitHelper<
+  S extends string,
+  SplitStr extends string = "",
+  A extends string[] = []
+> = S extends `${infer Char}${SplitStr}${infer Rest}`
+  ? SplitHelper<Rest, SplitStr, array.Push<A, Char>>
+  : S extends string
+  ? S extends ""
+    ? A
+    : array.Push<A, S>
+  : never
+
+/**
+ * 拆分字符串变为一个元组
+ * @example
+ * type Result = Split<'1,2,3', ','> // [1, 2, 3]
+ */
+type Split<S extends string, SplitStr extends string = ""> = SplitHelper<
+  S,
+  SplitStr
+>
+```
+
+#### GetStringLength - 获取字符串长度
+
+```ts
+/**
+ * 获取字符串的长度
+ * @example
+ * type Result = GetStringLength<"123"> // 3
+ */
+type GetStringLength<S extends string> = Split<S>["length"]
+```
+
+#### CharAt - 获取字符串在索引位 I 下的 字符
+
+```ts
+/**
+ * 获取字符串在索引位 I 下的 字符
+ * @example
+ * type Result = CharAt<"123", 1> // "2"
+ */
+type CharAt<S extends string, I extends number> = Split<S>[I]
+```
+
+#### Concat - 拼接两个字符串
+
+```ts
+/**
+ * 拼接两个字符串
+ * @example
+ * type Result = Concat<"123", "456"> // "123456"
+ */
+type Concat<S1 extends string, S2 extends string> = `${S1}${S2}`
+```
+
+#### Includes - 判断字符串是否包含子串
+
+```ts
+/**
+ * 判断字符串是否包含子串
+ * @example
+ * type Result = Includes<"123", "12"> // true
+ */
+type Includes<
+  S1 extends string,
+  S2 extends string
+> = S1 extends `${infer Left}${S2}${infer Right}` ? true : false
+```
+
+#### StartsWith - 判断字符串是否以子串为起始
+
+```ts
+/**
+ * 判断字符串是否以子串为起始
+ * @example
+ * type Result = StartsWith<"123", "12"> // true
+ */
+type StartsWith<
+  S1 extends string,
+  S2 extends string
+> = S1 extends `${S2}${infer Right}` ? true : false
+```
+
+#### EndsWith - 判断字符串是否以子串为结束
+
+```ts
+/**
+ * 判断字符串是否以子串为结束
+ * @example
+ * type Result = EndsWith<"123", "23"> // true
+ */
+type EndsWith<
+  S1 extends string,
+  S2 extends string
+> = S1 extends `${infer Left}${S2}` ? true : false
+```
+
+#### IndexOf - 从左往右查找子串的位置
+
+```ts
+type IndexOfHelper<
+  S1 extends string,
+  S2 extends string,
+  Len1 extends number = GetStringLength<S1>,
+  Len2 extends number = GetStringLength<S2>
+> = common.Or<
+  number.Compare<Len1, Len2>,
+  number.IsEqual<Len1, Len2>
+> extends true
+  ? S1 extends `${infer Left}${S2}${infer Right}`
+    ? GetStringLength<Left>
+    : -1
+  : -1
+
+/**
+ * 从左往右查找子串的位置
+ * @example
+ * type Result = IndexOf<"123", "23"> // 1
+ */
+type IndexOf<S1 extends string, S2 extends string> = IndexOfHelper<S1, S2>
+```
+
+#### LastIndexOf - 从右往左查找子串的位置
+
+```ts
+type LastIndexOfHelper<
+  S1 extends string,
+  S2 extends string,
+  Index extends number = -1 /** 当前从左往右匹配最大的值，匹配不到以后，上一次匹配的索引就是从右往左第一个的索引 */,
+  AddOffset extends number = 0 /** 每次从左往右匹配并替换成空串后，下次循序需要累加的值 */
+> = S1 extends `${infer Left}${S2}${infer Right}`
+  ? LastIndexOfHelper<
+      Replace<S1, S2, "">,
+      S2,
+      number.IntAddSingle<GetStringLength<Left>, AddOffset>,
+      number.IntAddSingle<AddOffset, GetStringLength<S2>>
+    >
+  : Index
+
+/**
+ * 从右往左查找子串的位置
+ * @example
+ * type Result = LastIndexOf<"23123", "23"> // 3
+ */
+type LastIndexOf<S1 extends string, S2 extends string> = LastIndexOfHelper<
+  S1,
+  S2
+>
+```
+
+#### Replace - 在字符串中查找并替换一处子串
+
+```ts
+/**
+ * 在字符串中查找并替换一处子串
+ * @example
+ * type Result = Replace<"23123", "23", "xx"> // "xx123"
+ */
+type Replace<
+  S extends string,
+  MatchStr extends string,
+  ReplaceStr extends string
+> = S extends `${infer Left}${MatchStr}${infer Right}`
+  ? `${Left}${ReplaceStr}${Right}`
+  : S
+```
+
+#### ReplaceAll - 在字符串中查找并替换所有子串
+
+```ts
+/**
+ * 在字符串中查找并替换所有子串
+ * @example
+ * type Result = Replace<"23123", "23", "xx"> // "xx1xx"
+ */
+type ReplaceAll<
+  S extends string,
+  MatchStr extends string,
+  ReplaceStr extends string
+> = Includes<S, MatchStr> extends true
+  ? ReplaceAll<Replace<S, MatchStr, ReplaceStr>, MatchStr, ReplaceStr>
+  : S
+```
+
+#### Repeat - 重复 Times 次数的字符串
+
+```ts
+type RepeatHelper<
+  S extends string,
+  Times extends number,
+  OriginStr extends string = S,
+  Offset extends number = 1
+> = Times extends 0
+  ? ""
+  : number.IsEqual<Times, Offset> extends true
+  ? S
+  : `${OriginStr}${RepeatHelper<
+      S,
+      Times,
+      OriginStr,
+      number.IntAddSingle<Offset, 1>
+    >}`
+
+/**
+ * 重复 Times 次数的字符串
+ * @example
+ * type Result = Repeat<"1", 5> // "11111"
+ */
+type Repeat<S extends string, Times extends number = 1> = RepeatHelper<S, Times>
+```
+
+#### PadStart - 在字符串前面填充
+
+```ts
+type PadHelper<
+  S extends string,
+  N extends number = 0,
+  FillS extends string = " ",
+  IsStart extends boolean = true,
+  Len extends number = GetStringLength<S>,
+  Offset extends number = Len
+> = number.Compare<N, Len> extends true
+  ? number.IsEqual<N, Offset> extends true
+    ? S
+    : PadHelper<
+        `${IsStart extends true ? FillS : ""}${S}${IsStart extends false
+          ? FillS
+          : ""}`,
+        N,
+        FillS,
+        IsStart,
+        Len,
+        number.IntAddSingle<Offset, 1>
+      >
+  : S
+
+type PadStart<
+  S extends string,
+  N extends number = 0,
+  FillS extends string = " "
+> = PadHelper<S, N, FillS>
+```
+
+#### PadEnd - 在字符串后面填充
+
+```ts
+type PadEnd<
+  S extends string,
+  N extends number = 0,
+  FillS extends string = " "
+> = PadHelper<S, N, FillS, false>
+```
+
+#### TrimLeft - 去掉字符串前面的空格
+
+```ts
+/**
+ * @see https://juejin.cn/post/7045536402112512007#heading-5
+ */
+type TrimLeft<S extends string> = S extends `${
+  | " "
+  | "\t"
+  | "\n"}${infer RightRest}`
+  ? TrimLeft<RightRest>
+  : S
+```
+
+
+#### TrimRight - 去掉字符串后面的空格
+
+```ts
+type TrimRight<S extends string> = S extends `${infer LeftRest}${
+  | " "
+  | "\t"
+  | "\n"}`
+  ? TrimRight<LeftRest>
+  : S
+```
+
+#### Trim - 去掉字符串的空格
+
+```ts
+type Trim<S extends string> = TrimLeft<TrimRight<S>>
+```
+
+
+#### ToUpperCase - 字符串转大写
+
+```ts
+type ToUpperCase<S extends string> = Uppercase<S>
+```
+
+
+#### ToLowerCase - 字符串转小写
+
+```ts
+type ToLowerCase<S extends string> = Lowercase<S>
+```
+
+
+#### SubString - 截取start（包括）到end（不包括）之间的字符串
+
+```ts
+type SubStringHelper<
+  S extends string,
+  Start extends number,
+  End extends number,
+  Offset extends number = 0,
+  Cache extends string[] = []
+> = number.IsEqual<Offset, End> extends true
+  ? array.Join<Cache, "">
+  : SubStringHelper<
+      S,
+      Start,
+      End,
+      number.IntAddSingle<Offset, 1>,
+      common.And3<
+        common.Or<number.Compare<Offset, Start>, number.IsEqual<Offset, Start>>,
+        common.Or<number.Compare<End, Offset>, number.IsEqual<Offset, End>>,
+        CharAt<S, Offset> extends string ? true : false
+      > extends true
+        ? array.Push<Cache, CharAt<S, Offset>>
+        : Cache
+    >
+/**
+ * 截取start（包括）到end（不包括）之间的字符串
+ * @example
+ * type Result = SubString<'123', 0, 1> // '1'
+ */
+type SubString<
+  S extends string,
+  Start extends number,
+  End extends number
+> = SubStringHelper<S, Start, End>
+```
+
+#### SubStr - 在字符串中抽取从开始下标到结束下标的字符
+
+```ts
+/**
+ * 在字符串中抽取从 开始 下标开始的指定数目的字符
+ */
+type SubStr<
+  S extends string,
+  Start extends number,
+  Len extends number
+> = SubStringHelper<S, Start, number.IntAddSingle<Start, Len>>
+```
+
+### 封装 array 工具类型
+
+### 封装 number 工具类型
+
+### 封装 object 工具类型
+
+### 封装 common 工具类型
+
+
+### 封装 function 工具类型
+
+
+## 实现一个加法器！
+
+最终代码
+
+```ts
+type Numbers = 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
+
+type AdvancedNumericCharacters =
+  | `${0}.${number}`
+  | `${Exclude<Numbers, 0>}${number | ""}.${number}`
+  | `${number}`
+
+type AddMap = [
+  [
+    { result: "0"; add: "0" }, // 00
+    { result: "1"; add: "0" }, // 01
+    { result: "2"; add: "0" }, // 02
+    { result: "3"; add: "0" }, // 03
+    { result: "4"; add: "0" }, // 04
+    { result: "5"; add: "0" }, // 05
+    { result: "6"; add: "0" }, // 06
+    { result: "7"; add: "0" }, // 07
+    { result: "8"; add: "0" }, // 08
+    { result: "9"; add: "0" } // 09
+  ],
+  [
+    { result: "1"; add: "0" }, // 10
+    { result: "2"; add: "0" }, // 11
+    { result: "3"; add: "0" }, // 12
+    { result: "4"; add: "0" }, // 13
+    { result: "5"; add: "0" }, // 14
+    { result: "6"; add: "0" }, // 15
+    { result: "7"; add: "0" }, // 16
+    { result: "8"; add: "0" }, // 17
+    { result: "9"; add: "0" }, // 18
+    { result: "0"; add: "1" } // 19
+  ],
+  // ....
+  [
+    { result: "8"; add: "0" }, // 80
+    { result: "9"; add: "0" }, // 81
+    { result: "0"; add: "1" }, // 82
+    { result: "1"; add: "1" }, // 83
+    { result: "2"; add: "1" }, // 84
+    { result: "3"; add: "1" }, // 85
+    { result: "4"; add: "1" }, // 86
+    { result: "5"; add: "1" }, // 87
+    { result: "6"; add: "1" }, // 88
+    { result: "7"; add: "1" } // 89
+  ],
+  [
+    { result: "9"; add: "0" }, // 90
+    { result: "0"; add: "0" }, // 91
+    { result: "1"; add: "1" }, // 92
+    { result: "2"; add: "1" }, // 93
+    { result: "3"; add: "1" }, // 94
+    { result: "4"; add: "1" }, // 95
+    { result: "5"; add: "1" }, // 96
+    { result: "6"; add: "1" }, // 97
+    { result: "7"; add: "1" }, // 98
+    { result: "8"; add: "1" } // 99
+  ]
+]
+
+type SplitByPoint<S extends AdvancedNumericCharacters> = string.Includes<
+  S,
+  "."
+> extends true
+  ? string.Split<S, ".">
+  : [S, "0"]
+
+type AddHelperSplitToArr<
+  S1 extends AdvancedNumericCharacters,
+  S2 extends AdvancedNumericCharacters,
+  Result = [SplitByPoint<S1>, SplitByPoint<S2>]
+> = Result extends [[`${number}`, `${number}`], [`${number}`, `${number}`]]
+  ? Result
+  : never
+
+type AddFillZeroHelper<
+  Data extends [[`${number}`, `${number}`], [`${number}`, `${number}`]],
+  Result = [
+    [
+      string.PadStart<Data[0][0], string.GetStringLength<Data[1][0]>, "0">,
+      string.PadEnd<Data[0][1], string.GetStringLength<Data[1][1]>, "0">
+    ],
+    [
+      string.PadStart<Data[1][0], string.GetStringLength<Data[0][0]>, "0">,
+      string.PadEnd<Data[1][1], string.GetStringLength<Data[0][1]>, "0">
+    ]
+  ]
+> = Result extends [[`${number}`, `${number}`], [`${number}`, `${number}`]]
+  ? Result
+  : never
+
+type AddReverseData<
+  Data extends [[`${number}`, `${number}`], [`${number}`, `${number}`]],
+  Result = [
+    [
+      array.Reverse<string.Split<Data[0][0]>>,
+      array.Reverse<string.Split<Data[0][1]>>
+    ],
+    [
+      array.Reverse<string.Split<Data[1][0]>>,
+      array.Reverse<string.Split<Data[1][1]>>
+    ]
+  ]
+> = Result extends [
+  [`${Numbers}`[], `${Numbers}`[]],
+  [`${Numbers}`[], `${Numbers}`[]]
+]
+  ? Result
+  : never
+
+type StepAdderHelper<
+  DataLeft extends `${Numbers}`[],
+  DataRight extends `${Numbers}`[],
+  Curry extends `${Numbers}` = `${0}`,
+  Offset extends number = 0,
+  ResultCache extends `${number}`[] = [],
+  NextOffset extends number = number.IntAddSingle<Offset, 1>,
+  Current extends AddMap[Numbers][Numbers] = AddMap[DataLeft[Offset]][DataRight[Offset]],
+  CurrentWidthPreCurry extends `${Numbers}` = AddMap[Current["result"]][Curry]["result"]
+> = DataLeft["length"] extends DataRight["length"]
+  ? `${Offset}` extends `${DataLeft["length"]}`
+    ? ResultCache
+    : StepAdderHelper<
+        DataLeft,
+        DataRight,
+        Current["add"],
+        NextOffset,
+        common.And<
+          number.IsEqual<Current["add"], "1">,
+          number.IsEqual<`${NextOffset}`, `${DataLeft["length"]}`>
+        > extends true
+          ? array.Push<["10", ...ResultCache], CurrentWidthPreCurry>
+          : array.Push<ResultCache, CurrentWidthPreCurry>
+      >
+  : never
+
+type NumbersWidthCurry = Numbers | 10
+
+type MergeResultHelper<
+  Data extends [
+    [`${Numbers}`[], `${Numbers}`[]],
+    [`${Numbers}`[], `${Numbers}`[]]
+  ],
+  LeftInt extends `${Numbers}`[] = Data[0][0],
+  LeftFloat extends `${Numbers}`[] = Data[0][1],
+  RightInt extends `${Numbers}`[] = Data[1][0],
+  RightFloat extends `${Numbers}`[] = Data[1][1],
+  FloatAdded extends `${NumbersWidthCurry}`[] = StepAdderHelper<
+    LeftFloat,
+    RightFloat
+  >,
+  FloatHasCurry extends boolean = FloatAdded[0] extends "10" ? true : false,
+  DeleteCurryFloatResult extends unknown[] = FloatHasCurry extends true
+    ? array.Shift<FloatAdded>
+    : FloatAdded,
+  IntAdded extends `${NumbersWidthCurry}`[] = StepAdderHelper<
+    LeftInt,
+    RightInt,
+    FloatHasCurry extends true ? `1` : "0"
+  >,
+  IntHasCurry extends boolean = IntAdded[0] extends "10" ? true : false,
+  DeleteCurryIntResult extends unknown[] = IntHasCurry extends true
+    ? array.Shift<IntAdded>
+    : IntAdded,
+  ResultReversed = array.Reverse<
+    LeftFloat["length"] extends 0
+      ? DeleteCurryIntResult
+      : array.Concat<
+          [...DeleteCurryFloatResult, "."],
+          [...DeleteCurryIntResult]
+        >
+  >,
+  FloatResult = array.Join<
+    ResultReversed extends string[]
+      ? IntHasCurry extends true
+        ? ["1", ...ResultReversed]
+        : ResultReversed
+      : never,
+    ""
+  >
+> = FloatResult
+
+type Add<
+  S1 extends AdvancedNumericCharacters,
+  S2 extends AdvancedNumericCharacters
+> = MergeResultHelper<
+  AddReverseData<AddFillZeroHelper<AddHelperSplitToArr<S1, S2>>>
+>
+
+type add = Add<"9007199254740991", "9007199254740991">
+```
+
 > 相关文章推荐
 >
 > [本文原文](https://yzl.xyz/lin/2022/01/%E6%8E%A5%E8%BF%91%E5%A4%A9%E8%8A%B1%E6%9D%BF%E7%9A%84TS%E7%B1%BB%E5%9E%8B%E4%BD%93%E6%93%8D-%E7%9C%8B%E6%87%82%E4%BD%A0%E5%B0%B1%E8%83%BD%E7%8E%A9%E8%BD%ACTS%E4%BA%86/c7c8c77c59d1.html)
-> 
+>
 > [掘金：TypeScript 类型体操姿势合集<通关总结>--刷完](https://juejin.cn/post/6999280101556748295)
-> 
-> [掘金：Ts高手篇：22个示例深入讲解Ts最晦涩难懂的高级类型工具](https://juejin.cn/post/6994102811218673700)
-> 
+>
+> [掘金：Ts 高手篇：22 个示例深入讲解 Ts 最晦涩难懂的高级类型工具](https://juejin.cn/post/6994102811218673700)
+>
 > [掘金：来做操吧！深入 TypeScript 高级类型和类型体操](https://juejin.cn/post/7039856272354574372)
-> 
+>
 > [掘金：模式匹配-让你 ts 类型体操水平暴增的套路](https://juejin.cn/post/7045536402112512007)
