update: 接近天花板的TS类型体操, 看懂你就能玩转TS了

--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -8,6 +8,8 @@ tags:
   - Typescript
 ---
 
+为了实现一个 ts 类型系统的加法器，我模仿 js 写了一个 ts 工具类型库
+
 本文以 [Typescript 4.5](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-5.html) 及以上版本为基础
 
 本文要实现一种类型工具 `type result = Add<"9007199254740991", "9007199254740991">`，能计算出两个数字字符串的和，即 `"18014398509481982"`
@@ -25,7 +27,7 @@ tags:
 ```ts
 type A = 1
 type B = 2
-type Example = A extends B ? true : false
+type Example = A extends B ? true : false // false
 ```
 
 `type Example = A extends B ? true : false` 中的 `true` 和 `false` 即可以理解成它们分别为 `if` 分支和 `else` 分支中要写的代码
@@ -126,7 +128,7 @@ type IsEqual<A, B> = (<T>() => T extends A ? 1 : 2) extends <
   : false
 ```
 
-`CheckLeftIsExtendsRight` 即校验左侧类型是否可分配给右侧类型，和 `==` 不同的是，`==` 会进行类型转换后进行比较，而条件类型 `Left extends Right ? xxx : xxx` 只会进行结构性兼容的检查
+`CheckLeftIsExtendsRight` 即校验左侧类型是否可分配给右侧类型，和 `==` 不同的是，`==` 会进行类型转换后的比较，而条件类型 `Left extends Right ? xxx : xxx` 只会进行结构性兼容的检查
 
 如
 
@@ -193,6 +195,8 @@ type Example<
 > = C extends true ? Example<false, [...Tuple, 1]> : Tuple
 
 type Result = Example // [1, 1]
+
+// Example 的两个泛型参数
 ```
 
 如上示例，`Result` 得到的类型是 `[1, 1]`
@@ -224,6 +228,7 @@ type Result2 = Example2<"1" | "2" | 3 | 4> // { 1: "1"; 2: "2"; 3: 3; 4: 4; }
 
 ```ts
 type NumberLike = number | `${number}`
+// 可分配给 NumberLike 的类型示例：number、`${number}`、1、-1、0.1、-0.1、"1"、"-1" 等
 ```
 
 判断为 0
@@ -385,7 +390,6 @@ type IntMinusSingleAbs<
 
 ### 封装 string 工具类型
 
-
 #### Stringify - 将类型字符串化
 
 ```ts
@@ -396,6 +400,8 @@ type IntMinusSingleAbs<
  */
 type Stringify<T extends common.CanStringified> = `${T}`
 ```
+
+原理：TS 内置的模板字符串类型
 
 #### GetChars - 获取字符
 
@@ -417,19 +423,23 @@ type GetCharsHelper<S, Acc> = S extends `${infer Char}${infer Rest}`
   : Acc
 ```
 
+原理：通过模板字符串类型的模式匹配，使用 `GetCharsHelper` 匹配出字符串类型的第一个字符和剩余字符，然后将剩余字符继续放入 `GetCharsHelper` 中进行处理
+
+每次匹配的结果通过 `Acc` 参数传递，当 `S` 为空字符串时，`S` 不能分配给 ``${infer Char}${infer Rest}``，走到 `false` 分支中，结束递归，即返回 `Acc` 类型
+
 #### Split - 分割字符串
 
 ```ts
 type SplitHelper<
   S extends string,
   SplitStr extends string = "",
-  A extends string[] = []
+  T extends string[] = []
 > = S extends `${infer Char}${SplitStr}${infer Rest}`
-  ? SplitHelper<Rest, SplitStr, array.Push<A, Char>>
+  ? SplitHelper<Rest, SplitStr, array.Push<T, Char>>
   : S extends string
   ? S extends ""
-    ? A
-    : array.Push<A, S>
+    ? T
+    : array.Push<T, S>
   : never
 
 /**
@@ -443,6 +453,14 @@ type Split<S extends string, SplitStr extends string = ""> = SplitHelper<
 >
 ```
 
+原理：分割字符串类型，是把字符串类型转为元组类型，参数中需要设置一个元组类型用作返回结果
+
+模板字符串类型的模式匹配是从左往右的，如果字符类型 `S` 为 `'1,2,3'`，`${infer Char}${','}${infer Rest}` 中 `Char` 即为 `'1'`，`Rest` 即为 `'2,3'`，同理，如果 `S` 为 `'2,3'`，`${infer Char}${','}${infer Rest}` 中 `Char` 即为 `'2'`，`Rest` 即为 `'3'`
+
+这样的话，我们只需要把每次匹配出的 `Char` 放到元组类型参数 `T` 中的最后一项，在匹配结束后，返回 `T` 的类型即可
+
+注：`array.Push` 见下文
+
 #### GetStringLength - 获取字符串长度
 
 ```ts
@@ -453,6 +471,8 @@ type Split<S extends string, SplitStr extends string = ""> = SplitHelper<
  */
 type GetStringLength<S extends string> = Split<S>["length"]
 ```
+
+原理：元组的长度是可以获取的，通过上文的 `Split` 可以将字符串类型按照 `''` 分割成元组类型，再取元组的 `length` 即为字符串类型的长度
 
 #### CharAt - 获取字符串在索引位 I 下的 字符
 
@@ -465,6 +485,8 @@ type GetStringLength<S extends string> = Split<S>["length"]
 type CharAt<S extends string, I extends number> = Split<S>[I]
 ```
 
+原理：元组类型可以进行索引访问，可以将字符串类型按照 `''` 分割成元组类型，然后通过 `索引访问`，得到索引位 `I` 处的字符
+
 #### Concat - 拼接两个字符串
 
 ```ts
@@ -475,6 +497,8 @@ type CharAt<S extends string, I extends number> = Split<S>[I]
  */
 type Concat<S1 extends string, S2 extends string> = `${S1}${S2}`
 ```
+
+原理：TS 模板字符串类型用法
 
 #### Includes - 判断字符串是否包含子串
 
@@ -490,6 +514,8 @@ type Includes<
 > = S1 extends `${infer Left}${S2}${infer Right}` ? true : false
 ```
 
+原理：模式匹配可判断字符串类型中是否含有子串
+
 #### StartsWith - 判断字符串是否以子串为起始
 
 ```ts
@@ -504,6 +530,8 @@ type StartsWith<
 > = S1 extends `${S2}${infer Right}` ? true : false
 ```
 
+原理：模式匹配时，左侧不写 `infer Left`，代表左侧只包含空字符串，不存在任何有长度的子串，即 `StartsWith`
+
 #### EndsWith - 判断字符串是否以子串为结束
 
 ```ts
@@ -517,6 +545,8 @@ type EndsWith<
   S2 extends string
 > = S1 extends `${infer Left}${S2}` ? true : false
 ```
+
+原理：模式匹配时，右侧不写 `infer Right`，代表右侧只包含空字符串，不存在任何有长度的子串，即 `EndsWith`
 
 #### IndexOf - 从左往右查找子串的位置
 
@@ -542,6 +572,10 @@ type IndexOfHelper<
  */
 type IndexOf<S1 extends string, S2 extends string> = IndexOfHelper<S1, S2>
 ```
+
+原理：匹配出 ``${infer Left}${S2}${infer Right}`` 中 `Left`，求其长度，则索引位即为 `Left` 的长度，如果匹配不到，返回 -1
+
+可以先比较父串和子串的长度，如果子串比父串还长，那就不需要匹配了，直接返回 -1
 
 #### LastIndexOf - 从右往左查找子串的位置
 
@@ -571,6 +605,12 @@ type LastIndexOf<S1 extends string, S2 extends string> = LastIndexOfHelper<
 >
 ```
 
+原理：模板字符串类型的模式匹配是从左往右的，而 `LastIndexOf` 是从右往左的，所以在匹配时，仍然基于从左往右匹配，但是每次匹配后，替换掉匹配过的子串为空串
+
+然后把删掉的部分的长度累计起来，就是最后模拟从右往左匹配到的索引值
+
+注：`Replace` 见下文
+
 #### Replace - 在字符串中查找并替换一处子串
 
 ```ts
@@ -588,6 +628,8 @@ type Replace<
   : S
 ```
 
+原理：基于模板字符串的模式匹配，匹配到了就用 `ReplaceStr` 换掉 `MatchStr`
+
 #### ReplaceAll - 在字符串中查找并替换所有子串
 
 ```ts
@@ -604,6 +646,8 @@ type ReplaceAll<
   ? ReplaceAll<Replace<S, MatchStr, ReplaceStr>, MatchStr, ReplaceStr>
   : S
 ```
+
+原理：基于 `Replace`，递归进行替换，替换掉所有 `MatchStr`
 
 #### Repeat - 重复 Times 次数的字符串
 
@@ -631,6 +675,18 @@ type RepeatHelper<
  */
 type Repeat<S extends string, Times extends number = 1> = RepeatHelper<S, Times>
 ```
+
+原理：当重复次数 `Times` 为 `0` 时，直接返回空字符串
+
+在参数中传递循环变量 `Offset` （每次传递时加 1，即 `number.IntAddSingle<Offset, 1>`），当循环变量 `Offset` 和循环次数 `Times` 相等时，结束递归
+
+每次递归中，都在字符串的起始位置插入一个字符串 `S`，即
+
+```txt
+`${第一次的S}${`${第二次的S}${`${第三次的S}${剩下的...}`}`}`
+```
+
+注：`number.IntAddSingle、number.IsEqual` 见下文
 
 #### PadStart - 在字符串前面填充
 
@@ -664,6 +720,8 @@ type PadStart<
 > = PadHelper<S, N, FillS>
 ```
 
+原理：
+
 #### PadEnd - 在字符串后面填充
 
 ```ts
@@ -688,7 +746,6 @@ type TrimLeft<S extends string> = S extends `${
   : S
 ```
 
-
 #### TrimRight - 去掉字符串后面的空格
 
 ```ts
@@ -706,13 +763,11 @@ type TrimRight<S extends string> = S extends `${infer LeftRest}${
 type Trim<S extends string> = TrimLeft<TrimRight<S>>
 ```
 
-
 #### ToUpperCase - 字符串转大写
 
 ```ts
 type ToUpperCase<S extends string> = Uppercase<S>
 ```
-
 
 #### ToLowerCase - 字符串转小写
 
@@ -720,8 +775,7 @@ type ToUpperCase<S extends string> = Uppercase<S>
 type ToLowerCase<S extends string> = Lowercase<S>
 ```
 
-
-#### SubString - 截取start（包括）到end（不包括）之间的字符串
+#### SubString - 截取 start（包括）到 end（不包括）之间的字符串
 
 ```ts
 type SubStringHelper<
@@ -778,9 +832,7 @@ type SubStr<
 
 ### 封装 common 工具类型
 
-
 ### 封装 function 工具类型
-
 
 ## 实现一个加法器！
 
